First JavaFX Project. Changed to MVC architecture )

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -79,7 +79,7 @@ javafx.enable.concurrent.external.runs=false
 javafx.enabled=true
 javafx.fallback.class=com.javafx.main.NoJavaFXFallback
 # Main class for JavaFX
-javafx.main.class=mp3player.Mp3Player
+javafx.main.class=org.hackerthon.mp3player.view.Mp3Player
 javafx.preloader.class=
 # This project does not use Preloader
 javafx.preloader.enabled=false
